# UGhent_Advanced-Algorithms

./: .gitignore  README.md
Extra/Autocomplete/: .gitignore  CMakeLists.txt  README.md
Extra/Autocomplete/include/: ternaire-zoekboom.h
Extra/Autocomplete/src/: main.cpp  ternaire-zoekboom.cpp
Extra/Autocomplete/test/: CMakeLists.txt  test.cpp
Extra/Boyer-Moore/: CMakeLists.txt  README.md
Extra/Boyer-Moore/include/: boyermoore.h
Extra/Boyer-Moore/src/: benchmark.cpp  bm_horspool.cpp  bm_sunday.cpp  bm_verkeerdekarakter.cpp
Extra/Boyer-Moore/test/: CMakeLists.txt  test.cpp
Extra/Dijkstra/: CMakeLists.txt  DOCUMENTATIE.graaf.md  README.md  trajecten.csv
Extra/Dijkstra/include/: fietsnet.h  serializer.h
Extra/Dijkstra/src/: fietsnet.cpp  serializer.cpp  webserver.cpp
Extra/Dijkstra/test/: CMakeLists.txt  test.cpp
Extra/Dijkstra/www/: index.html
Extra/Dijkstra/www/js/: map.js
Extra/Fietsknooppunten/: CMakeLists.txt  README.md  knooppunten.csv
Extra/Fietsknooppunten-2/: CMakeLists.txt  README.md
Extra/Fietsknooppunten-2/afbeeldingen/: graaf.plantuml
Extra/Fietsknooppunten-2/include/: fietsnet.h  graaf.hpp  serializer.h
Extra/Fietsknooppunten-2/src/: fietsnet.cpp  serializer.cpp  webserver.cpp
Extra/Fietsknooppunten-2/test/: CMakeLists.txt  test.cpp
Extra/Fietsknooppunten-2/www/: index.html
Extra/Fietsknooppunten-oplossing/: trajecten.csv
Extra/Huffman/: CMakeLists.txt  README.md
Extra/Huffman & Rabin-Karp/: .gitignore  CMakeLists.txt  README.md
Extra/Huffman & Rabin-Karp/include/: huffman.h
Extra/Huffman & Rabin-Karp/src/: huffman.cpp  vraag1.cpp  vraag2.cpp
Extra/Huffman/include/: bitstream.h  huffman.h
Extra/Huffman/src/: bitstream.cpp  huffman.cpp  main.cpp
Extra/Huffman/test/: CMakeLists.txt  test.cpp
Extra/KMP/: README.md
Extra/KMP-oplossing/: CMakeLists.txt
Extra/KMP-oplossing/include/: automaten.h  naiefZoeken.h
Extra/KMP-oplossing/src/: automaten.cpp  naiefZoeken.cpp
Extra/KMP-oplossing/test/: test.cpp
Extra/LZW/: CMakeLists.txt  README.md
Extra/LZW/include/: bitstream.h  lzw.h
Extra/LZW/src/: lzw.cpp  main.cpp
Extra/LZW/test/: CMakeLists.txt  test.cpp
Extra/PATRICIA/: .gitignore  README.md
Extra/PATRICIA-oplossing/: CMakeLists.txt
Extra/PATRICIA-oplossing/include/: patricia.h  patriciaknoop.h
Extra/PATRICIA-oplossing/src/: main.cpp
Extra/PATRICIA-oplossing/test/: CMakeLists.txt
Extra/Rabin-Karp/: rabin-karp.cpp
Extra/Regexps/: CMakeLists.txt  README.md
Extra/Regexps/include/: automaten.h  regexp.h
Extra/Regexps/src/: automaten.cpp  regexp.cpp  regexp_voorbeeld.cpp
Extra/Regexps/test/: CMakeLists.txt  test.cpp
Extra/Ryanair/: CMakeLists.txt
Extra/Ryanair-oplossing/: DOCUMENTATIE.graaf.md  README.md  ryanair.txt
Extra/Ryanair-oplossing/test/: CMakeLists.txt
Extra/Ryanair/src/: euler.cpp  main.cpp  pin.cpp
Extra/Ryanair/test/: test.cpp
Extra/Seam-Carving/: .gitlab-ci.yml  CMakeLists.txt  README.md
Extra/Seam-Carving-oplossing/: CMakeLists.txt  lsan_suppressions.txt
Extra/Seam-Carving-oplossing/include/: kortste-pad.h
Extra/Seam-Carving-oplossing/src/: seamcarving.cpp
Extra/Seam-Carving-oplossing/test/: test-kortste-pad.cpp
Extra/Stroomnetwerken/: .gitlab-ci.yml  CMakeLists.txt  README.md
Extra/Stroomnetwerken/include/: galadiner.h  graaf.hpp  stroomnet.h
Extra/Stroomnetwerken/src/: galadiner.cpp  main.cpp
Extra/Stroomnetwerken/test/: CMakeLists.txt  test.cpp
lab01/Kettingwoorden/: CMakeLists.txt  README.md
lab01/Kettingwoorden/src/: componenten.cpp  graaf.hpp  keten.hpp  keten_demo.cpp  main.cpp  woordspel.cpp
lab01/Kettingwoorden/test/: CMakeLists.txt  test.cpp
lab02/DeBruijnreeks/: CMakeLists.txt  README.md
lab02/DeBruijnreeks/include/: debruijnreeks.h  euler.h
lab02/DeBruijnreeks/src/: debruijnreeks.cpp  euler.cpp  main.cpp
lab02/DeBruijnreeks/test/: CMakeLists.txt  test.cpp
lab03/IslandOfSodor/: CMakeLists.txt  README.md  sodor-trainnetwork.json
lab03/IslandOfSodor/images/: eenvoudig-stroonetwerk.dot
lab03/IslandOfSodor/include/: network-reader.h  sodor.h  stroomnet.h
lab03/IslandOfSodor/src/: bipartite.cpp  network-reader.cpp  sodor-main.cpp  sodor.cpp
lab03/IslandOfSodor/test/: CMakeLists.txt  eenvoudig-stroomnetwerk.cpp  test.cpp
lab04/Rood-ZwarteBoom/: CMakeLists.txt  Ovidius  README.md  Repository.md
lab04/Rood-ZwarteBoom/include/: rzwboom.h  rzwknoop.h
lab04/Rood-ZwarteBoom/src/: main.cpp
lab04/Rood-ZwarteBoom/test/: CMakeLists.txt  test.cpp
lab05/Splayboom/: CMakeLists.txt  README.md  Repository.md
lab05/Splayboom/include/: splayboom.h
lab05/Splayboom/test/: splayboom_test.cpp
lab06/Pakjesbezorger/: CMakeLists.txt  README.md
lab06/Pakjesbezorger/include/: pakjes.h
lab06/Pakjesbezorger/src/: main.cpp  pakjes.cpp
lab06/Pakjesbezorger/test/: CMakeLists.txt  test.cpp
lab07/Airbnb/: CMakeLists.txt  README.md
lab07/Airbnb/include/: airbnb.h  bknoop.h  btree.h  schijf.h
lab07/Airbnb/src/: airbnb.cpp  main.cpp
lab07/Airbnb/test/: CMakeLists.txt  test.cpp
lab08/AutomatenUitRegexp/: CMakeLists.txt  README.md
lab09/BoyerMoore/: CMakeLists.txt  README.md
lab09/BoyerMoore/benchmarks/: bm-00.bm  bm-03.bm  bm-O3notable.bm  bm-asan.bm  bm-nomanip.bm  bm-table.bm
lab09/BoyerMoore/include/: boyermoore.h
lab09/BoyerMoore/src/: bm_horspool.cpp  bm_sunday.cpp  bm_verkeerdekarakter.cpp  main.cpp
lab09/BoyerMoore/test/: CMakeLists.txt  benchmark.cpp  test.cpp
lab09/BoyerMoore/test/files/: lingpatts  wgspatts
lab10/DEFLATE/: .gitignore  CMakeLists.txt  README.md  error.txt
lab10/DEFLATE/include/: lz77.h  suffix_array.h
lab10/DEFLATE/src/: bitstream.cpp  lz77.cpp  main.cpp  suffix_array.cpp
lab10/DEFLATE/test/: CMakeLists.txt  test.cpp
lab11/hardnekkigeProblemen/: CMakeLists.txt  README.md
lab11/hardnekkigeProblemen/include/: kerstman.h  kerstman_prob.h  kerstman_sa.h  probprob.h  probprob_voorbeeld.h  simulatedannealing.h
lab11/hardnekkigeProblemen/src/: kerstman.cpp  kerstman_prob.cpp  kerstman_sa.cpp  main.cpp  probprob_voorbeeld.cpp
lab11/hardnekkigeProblemen/test/: CMakeLists.txt  test.cpp
(+50 files in other folders)
